# CoPaw

./: README_zh.md  pyproject.toml
embedded software strategy generation tool/: .env.example  README.md  pyproject.toml
embedded software strategy generation tool/configs/: dev.yaml
embedded software strategy generation tool/data/fixtures/: sample_strategy.txt
embedded software strategy generation tool/data/golden/: sample_pseudocode.txt
embedded software strategy generation tool/prompts/extraction/: v1_extract.txt
embedded software strategy generation tool/prompts/pseudocode/: v1_system.txt  v1_user.txt
embedded software strategy generation tool/prompts/review/: v1_completeness.txt
embedded software strategy generation tool/src/copaw_tool/: __init__.py
embedded software strategy generation tool/src/copaw_tool/adapters/exporters/: markdown_exporter.py
embedded software strategy generation tool/src/copaw_tool/adapters/extraction/: base.py  docx_pdf_adapter.py  mineru_adapter.py
embedded software strategy generation tool/src/copaw_tool/adapters/llm/: openai_client.py
embedded software strategy generation tool/src/copaw_tool/application/dto/: strategy_dto.py
embedded software strategy generation tool/src/copaw_tool/application/services/: extraction_service.py  pseudocode_service.py
embedded software strategy generation tool/src/copaw_tool/application/workflows/: graph_state.py  strategy_workflow.py
embedded software strategy generation tool/src/copaw_tool/shared/: exceptions.py  utils.py
examples/testpaw/: README.md  pyproject.toml
examples/testpaw/src/testpaw/agents/: __init__.py  registry.py
examples/testpaw/tests/unit/: test_api.py  test_cli.py  test_config.py  test_graph.py  test_modules.py  test_multi_agent.py  test_parity_contract.py  test_parity_modules.py  test_providers.py  test_workspace.py
(+113 files in other folders)
