[project]
name = "testpaw"
version = "0.1.0"
description = "A LangGraph-driven multi-module assistant project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "click>=8.1.0",
  "pydantic>=2.8.0",
  "langgraph>=0.2.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]

[project.scripts]
testpaw = "testpaw.cli.main:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
testpaw = ["api/console/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
